# renamejpgs

./: Cargo.toml
src/: main.rs
