[package]
name = "renamejpgs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.3.2"

[dependencies.uuid]
version = "1.7.0"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
]
